tetrate/tis0208/e2e/good-resource.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-notfound
spec:
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive-peer-auth-1
spec:
  mtls:
    mode: PERMISSIVE
