tetrate/tis0208/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-allow-permissive-peerauth
spec:
  steps:
    - name: apply-peerauthentication-policy
      try:
        - apply:
            file: ../allow-permissive-peerauth.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
